--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 .box{
 	width: 300px;
 	height: 400px;
-	float: left;
 	border-radius: 50px;
-	margin: 0px 30px 50px 0px;
+	margin: 0px 2% 20px 0px;
+	display: inline-block;
+	vertical-align: bottom;
 }
 
 .box:hover{
@@ -12,18 +13,11 @@
 }
 
 .container{
-	margin-top: 10%;
-	margin-left: 10%;
-	margin-right: 10%;
-}
-
-.box-title{
+	width: 100%;
+	height: 400px;
 	text-align: center;
-	font-size: 2em;
-	color: white;
-	vertical-align: bottom;
-	font-family: 'Raleway', sans-serif;
-	font-weight: bold;
+	margin-top: 100px;
+	margin-bottom: 50px;
 }
 
 .box-unit{
@@ -33,6 +27,15 @@
 	vertical-align: bottom;
 	font-variant: small-caps;
 	font-family: 'Raleway', sans-serif;
+}
+
+.box-title{
+	text-align: center;
+	font-size: 2em;
+	color: white;
+	vertical-align: bottom;
+	font-family: 'Raleway', sans-serif;
+	font-weight: bold;
 }
 
 #unit-1{
@@ -50,6 +53,7 @@
 h1,h2{
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
+	clear: both;
 }
 
 a, a:visited{
